--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,22 @@ rdma-core (24.0-1) unstable; urgency=medium
 
  -- Benjamin Drung <benjamin.drung@cloud.ionos.com>  Tue, 22 Jan 2019 13:27:29 +0100
 
+rdma-core (22.1-1) unstable; urgency=medium
+
+  * New upstream bugfix release.
+
+ -- Benjamin Drung <benjamin.drung@cloud.ionos.com>  Wed, 06 Feb 2019 15:58:48 +0100
+
+rdma-core (22.0-1) unstable; urgency=medium
+
+  * New upstream release.
+    - mlx5: Add DEVX APIs for interop with verbs objects
+    - Add pyverbs Python binding
+  * Update private libibverbs symbols
+  * Bump Standards-Version to 4.3.0 (no changes required)
+
+ -- Benjamin Drung <benjamin.drung@cloud.ionos.com>  Tue, 22 Jan 2019 13:27:29 +0100
+
 rdma-core (21.0-1) unstable; urgency=medium
 
   * New upstream release.
