changelog: Drop d/p/pyverbs-Add-shebang-to-ib_devices.py-example.patch now being upstream
Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ rdma-core (24.0-1) unstable; urgency=medium
     - Add pyverbs Python binding
   * Update private libibverbs symbols
   * Bump Standards-Version to 4.3.0 (no changes required)
+  * Drop d/p/pyverbs-Add-shebang-to-ib_devices.py-example.patch now being
+    upstream
 
  -- Benjamin Drung <benjamin.drung@cloud.ionos.com>  Tue, 22 Jan 2019 13:27:29 +0100
 
